--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <p></p>
 
 <div class="body">
-    <p onclick ="showInf()" style="font-size: 40px; font-family: Courier New; text-align: center; margin: auto; margin-right: 44.9%;">А. С. Пушкин</p>
+    <p onclick ="showInf()" style="font-size: 40px; font-family: Courier New; text-align: center; margin: auto; margin-right: 44.9%;">Пушкин А. С.</p>
     <ul class="up" onclick="wind()" hidden>
         <li>
             <a href="#" target="_blank" style="font-size: 25px;">Капитанская дочка n/5</a>
