--- a/glavnaya.html
+++ b/glavnaya.html
@@ -2,6 +2,10 @@
 <html>
 <head>
     <title>Каталог книг</title>
+    <style> 
+         body{
+                background-color: powderblue;}
+                </style>
 </head>
 <body>
     <h1>Каталог книг</h1>
@@ -27,7 +31,6 @@
             if (currentAvailability > 0) {
                 span.textContent = currentAvailability - 1;
             }
-        }
 
         function increaseAvailability(spanId, total) {
             const span = document.getElementById(spanId);
