--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head> 
  
 <header style="border-radius: 10px;"> 
-    <button style="height: 70px; width: 210px; font-size: 25px; border-radius: 10px; color: rgb(69, 74, 88); background-color:powderblue;border-style: double; border-width: 3px; border: none; margin-left: 84.5%; margin-top: 2%;" onclick="window.location.href ='https://github.com/Annushka-123/InnLibrary/blob/main/sait.html';"> 
+    <button style="height: 70px; width: 210px; font-size: 25px; border-radius: 10px; color: rgb(69, 74, 88); background-color:powderblue;border-style: double; border-width: 3px; border: none; margin-left: 84.5%; margin-top: 2%;" onclick="window.location.href ='sait.html';"> 
         Внести изменения 
     </button> 
     <p style="text-align: center; margin-top: -1.7%; margin-right: 3%; font-family: Georgia;">InnoLibrary</p> 
