--- a/sait.html
+++ b/sait.html
@@ -18,9 +18,9 @@
 <body style="padding: 30px; background-color: powderblue; text-align: center; "> 
     <p style="font-size: 15pt; margin-top: 16%;">Пароль:</p> 
     <input style="font-size: 20pt; color: rgb(135, 215, 255); border: 3px; border-radius: 13px;" id="passwordBox" type="password"/> 
-    <a style="color: Azure; font-size: 17pt;" href="https://vk.com/feed" onclick="return checkPassword();"> 
+    <a style="color: Azure; font-size: 17pt;" href="glavnaya.html" onclick="return checkPassword();"> 
         <p> </p> 
-        Жми здесь чтобы отправить пароль и посмотреть сайт 
+        Жми здесь чтобы отправить пароль
     </a> 
 </body> 
 </html>
