--- a/index.html
+++ b/index.html
@@ -43,21 +43,12 @@
     <p onclick ="showInf()" style="font-size: 40px; font-family: Courier New; text-align: center; margin: auto; margin-right: 44.9%;">Пушкин А.С.</p>
     <ul class="up" onclick="wind()" hidden>
         <li>
-            <a href="#" target="_blank" style="font-size: 25px;">Капитанская дочка n/5</a>
+            <a href="#" target="_blank" style="font-size: 25px;">Капитанская дочка 3/7</a>
         </li>
         <li>
-            <a href="#" target="_blank"style="font-size: 25px;">Дубровский n/5</a>
+            <a href="#" target="_blank"style="font-size: 25px;">Дубровский 7/7</a>
         <li>
-            <a href="#" target="_blank"style="font-size: 25px;">Песнь о вещем Олеге n/5</a>
-        </li>
-        <li>
-            <a href="#" target="_blank"style="font-size: 25px;">Евгений Онегин n/5</a>
-        </li>
-        <li>
-            <a href="#" target="_blank"style="font-size: 25px;">Сказка о рыбаке и рыбке n/5</a>
-        </li>        
-        <li>
-            <a href="#" target="_blank"style="font-size: 25px;">Зимний вечер n/5</a>
+            <a href="#" target="_blank"style="font-size: 25px;">Сборник стихов 5/6</a>
         </li>
     </ul>
 </div>
